--- a/app/src/main/res/layout/drug_store_dialog.xml
+++ b/app/src/main/res/layout/drug_store_dialog.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/dialog_background"
         android:padding="20dp"
+        android:layout_gravity="center"
         android:layout_margin="40dp">
         <RelativeLayout
             android:layout_width="match_parent"
@@ -52,12 +53,12 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:layout_marginTop="10dp"
                 android:id="@+id/edt_address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/text_normal"
                 android:layout_below="@id/edt_drugstore_name"
+                android:layout_marginTop="10dp"
                 android:layout_alignStart="@id/edt_drugstore_name"
                 style="@style/MyEditText"/>
 
