--- a/app/src/main/res/layout/drug_store_dialog.xml
+++ b/app/src/main/res/layout/drug_store_dialog.xml
@@ -56,11 +56,11 @@
 
                 <EditText
                     android:id="@+id/edt_drugstore_name"
+                    style="@style/MyEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/txt_drugstore"
-                    android:textSize="@dimen/text_normal"
-                    style="@style/MyEditText"/>
+                    android:textSize="@dimen/text_normal"/>
 
                 <TextView
                     android:id="@+id/txt_address"
