--- a/app/src/main/res/layout/item_drug.xml
+++ b/app/src/main/res/layout/item_drug.xml
@@ -8,17 +8,20 @@
     android:layout_marginVertical="10dp">
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="10"
         android:background="@drawable/card_background">
         <LinearLayout
+
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="7"
+            android:layout_weight="10"
             android:orientation="vertical"
             android:layout_margin="10dp">
             <TextView
+                android:id="@+id/txtDrugName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Pharmacity"
@@ -45,7 +48,7 @@
                             android:text="@string/amount_"
                             android:textSize="@dimen/text_small"/>
                         <TextView
-                            android:id="@+id/txt_amount"
+                            android:id="@+id/txtAmount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
@@ -79,6 +82,48 @@
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_weight="3"
+            >
+            <TextView
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="$"
+
+                />
+            <TextView
+                android:id="@+id/tvPrice"
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="30"
+
+                />
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_update"
+                app:cardBackgroundColor="@color/dark_primary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="22dp">
+                <ImageView
+                    android:id="@+id/btnUpdate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerInParent="true"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/ic_refresh"/>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+
     </LinearLayout>
+
 
 </androidx.cardview.widget.CardView>
