--- a/app/src/main/res/layout/activity_drug.xml
+++ b/app/src/main/res/layout/activity_drug.xml
@@ -121,7 +121,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewDrug"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:overScrollMode="never"
         android:layout_margin="12dp"/>
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:text="Test"
+        />
 </LinearLayout>
