--- a/app/src/main/res/layout/drug_dialog.xml
+++ b/app/src/main/res/layout/drug_dialog.xml
@@ -114,36 +114,31 @@
                     android:layout_alignStart="@id/edt_amount"
                     style="@style/MyEditText"/>
 
-<!--                <TextView-->
-<!--                    android:id="@+id/txt_price"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_below="@+id/txt_unit"-->
-<!--                    android:layout_alignTop="@+id/edt_price"-->
-<!--                    android:layout_alignEnd="@+id/txt_unit"-->
-<!--                    android:layout_alignBottom="@+id/edt_price"-->
+                <TextView
+                    android:id="@+id/txt_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/txt_unit"
+                    android:layout_alignTop="@+id/spinner"
+                    android:layout_alignEnd="@+id/txt_unit"
+                    android:layout_alignBottom="@+id/spinner"
 
-<!--                    android:gravity="center_vertical"-->
-<!--                    android:text="@string/price"-->
-<!--                    android:textColor="@color/dark_text"-->
-<!--                    android:textSize="@dimen/text_normal"-->
-<!--                    android:textStyle="bold" />-->
+                    android:gravity="center_vertical"
+                    android:text="@string/unit"
+                    android:textColor="@color/dark_text"
+                    android:textSize="@dimen/text_normal"
+                    android:textStyle="bold" />
 
-<!--                <EditText-->
-<!--                    android:id="@+id/edt_price"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:textSize="@dimen/text_normal"-->
-<!--                    android:layout_below="@id/edt_unit"-->
-<!--                    android:layout_marginTop="10dp"-->
-<!--                    android:layout_alignStart="@id/edt_unit"-->
-<!--                    style="@style/MyEditText"/>-->
-
-
-
-
-
-
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_normal"
+                    android:layout_below="@id/edt_price"
+                    android:layout_marginTop="10dp"
+                    android:layout_alignStart="@id/edt_price"
+                    android:spinnerMode="dialog"
+                    />
             </RelativeLayout>
             <Button
                 android:id="@+id/btnSave"
