--- a/app/src/main/res/layout/activity_drug.xml
+++ b/app/src/main/res/layout/activity_drug.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="10dp"
-            android:text="DRUG"
+            android:text="THUỐC"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -125,9 +125,6 @@
         android:overScrollMode="never"
         android:layout_margin="12dp"/>
 
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:text="Test"
-        />
+
+
 </LinearLayout>
