--- a/app/src/main/res/layout/drug_dialog.xml
+++ b/app/src/main/res/layout/drug_dialog.xml
@@ -42,16 +42,14 @@
 
                 <TextView
                     android:id="@+id/txt_drugstore"
+                    style="@style/NormalText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@+id/edt_drug_name"
                     android:layout_alignBottom="@+id/edt_drug_name"
                     android:layout_alignParentStart="true"
-                    android:layout_marginEnd="10dp"
                     android:gravity="center_vertical"
-                    android:text="@string/drug"
-                    android:textColor="@color/dark_text"
-                    android:textSize="@dimen/text_normal"
+                    android:text="@string/drug_"
                     android:textStyle="bold" />
 
                 <EditText
@@ -59,56 +57,46 @@
                     style="@style/MyEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/txt_drugstore"
-                    android:textSize="@dimen/text_normal" />
+                    android:layout_toEndOf="@+id/txt_drugstore" />
 
                 <TextView
                     android:id="@+id/txt_amount"
+                    style="@style/NormalText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/txt_drugstore"
                     android:layout_alignTop="@+id/edt_amount"
                     android:layout_alignEnd="@+id/txt_drugstore"
                     android:layout_alignBottom="@+id/edt_amount"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="5dp"
                     android:gravity="center_vertical"
                     android:text="@string/amount_"
-                    android:textColor="@color/dark_text"
-                    android:textSize="16dp"
                     android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/edt_amount"
+                    style="@style/MyEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_normal"
                     android:layout_below="@id/edt_drug_name"
-                    android:layout_marginTop="10dp"
                     android:layout_alignStart="@id/edt_drug_name"
-                    style="@style/MyEditText"/>
+                    android:layout_marginTop="10dp" />
 
                 <TextView
                     android:id="@+id/txt_unit"
+                    style="@style/NormalText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/txt_amount"
                     android:layout_alignTop="@+id/edt_price"
                     android:layout_alignEnd="@+id/txt_amount"
                     android:layout_alignBottom="@+id/edt_price"
-
                     android:gravity="center_vertical"
                     android:text="@string/price"
-                    android:textColor="@color/dark_text"
-                    android:textSize="@dimen/text_normal"
                     android:textStyle="bold" />
                 <EditText
                     android:id="@+id/edt_price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_normal"
                     android:layout_below="@id/edt_amount"
                     android:layout_marginTop="10dp"
                     android:layout_alignStart="@id/edt_amount"
@@ -116,17 +104,15 @@
 
                 <TextView
                     android:id="@+id/txt_price"
+                    style="@style/NormalText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/txt_unit"
                     android:layout_alignTop="@+id/spinner"
                     android:layout_alignEnd="@+id/txt_unit"
                     android:layout_alignBottom="@+id/spinner"
-
                     android:gravity="center_vertical"
-                    android:text="@string/unit"
-                    android:textColor="@color/dark_text"
-                    android:textSize="@dimen/text_normal"
+                    android:text="@string/unit_"
                     android:textStyle="bold" />
 
                 <Spinner
@@ -137,8 +123,7 @@
                     android:layout_below="@id/edt_price"
                     android:layout_marginTop="10dp"
                     android:layout_alignStart="@id/edt_price"
-                    android:spinnerMode="dialog"
-                    />
+                    android:spinnerMode="dialog"/>
             </RelativeLayout>
             <Button
                 android:id="@+id/btnSave"
@@ -147,7 +132,6 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="30dp"
                 android:text="@string/save"
-                android:textSize="@dimen/text_normal"
                 style="@style/MyButton"
                 android:background="@drawable/button_background" />
         </LinearLayout>
