--- a/app/src/main/res/layout/drug_store_dialog.xml
+++ b/app/src/main/res/layout/drug_store_dialog.xml
@@ -42,6 +42,7 @@
 
                 <TextView
                     android:id="@+id/txt_drugstore"
+                    style="@style/NormalText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@+id/edt_drugstore_name"
@@ -50,8 +51,6 @@
                     android:layout_marginEnd="10dp"
                     android:gravity="center_vertical"
                     android:text="@string/drugstore_"
-                    android:textColor="@color/dark_text"
-                    android:textSize="@dimen/text_normal"
                     android:textStyle="bold" />
 
                 <EditText
@@ -59,29 +58,25 @@
                     style="@style/MyEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/txt_drugstore"
-                    android:textSize="@dimen/text_normal"/>
+                    android:layout_toEndOf="@+id/txt_drugstore"/>
 
                 <TextView
                     android:id="@+id/txt_address"
+                    style="@style/NormalText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/txt_drugstore"
                     android:layout_alignTop="@+id/edt_address"
                     android:layout_alignEnd="@+id/txt_drugstore"
                     android:layout_alignBottom="@+id/edt_address"
-                    android:layout_marginEnd="10dp"
                     android:gravity="center_vertical"
                     android:text="@string/address_"
-                    android:textColor="@color/dark_text"
-                    android:textSize="@dimen/text_normal"
                     android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/edt_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_normal"
                     android:layout_below="@id/edt_drugstore_name"
                     android:layout_marginTop="10dp"
                     android:layout_alignStart="@id/edt_drugstore_name"
@@ -97,9 +92,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="30dp"
                 android:text="@string/save"
-                android:textSize="@dimen/text_normal"
-                style="@style/MyButton"
-                android:background="@drawable/button_background" />
+                style="@style/MyButton"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
