--- a/app/src/main/res/layout/fragment_drug.xml
+++ b/app/src/main/res/layout/fragment_drug.xml
@@ -15,7 +15,8 @@
             style="@style/MySearchBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp">
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="10dp">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -25,7 +26,8 @@
                     style="@style/MyEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toStartOf="@id/btn_search" />
+                    android:layout_toStartOf="@id/btn_search"
+                    android:hint="@string/search" />
 
                 <ImageView
                     android:id="@+id/btn_search"
@@ -52,7 +54,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp">
 
             <LinearLayout
                 android:layout_toStartOf="@id/card_add"
