--- a/app/src/main/res/layout/item_drug.xml
+++ b/app/src/main/res/layout/item_drug.xml
@@ -122,18 +122,19 @@
                 android:layout_weight="3"
                 >
                 <TextView
-                    android:layout_gravity="center_vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="$"
-                    style="@style/SmallText"
-                    />
-                <TextView
                     android:id="@+id/tvPrice"
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="30"
+                    style="@style/SmallText"
+                    />
+                <TextView
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:text="VND"
                     style="@style/SmallText"
                     />
                 <androidx.cardview.widget.CardView
