--- a/app/src/main/res/layout/drug_dialog.xml
+++ b/app/src/main/res/layout/drug_dialog.xml
@@ -75,6 +75,7 @@
                 <EditText
                     android:id="@+id/edt_amount"
                     style="@style/MyEditText"
+                    android:inputType="number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/edt_drug_name"
@@ -84,6 +85,7 @@
                 <TextView
                     android:id="@+id/txt_unit"
                     style="@style/NormalText"
+                    android:inputType="number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/txt_amount"
