--- a/app/src/main/res/layout/drug_store_dialog.xml
+++ b/app/src/main/res/layout/drug_store_dialog.xml
@@ -85,7 +85,7 @@
 
 
             </RelativeLayout>
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_save"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
